--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,11 @@
 /*-------------------------------------------------*/
 
 /* global reset */
-* {
-    margin: 0px;
-    /*padding: 0px;*/
+html, body {
+    margin:0;
+    padding:0;
+    height:100%;
 }
-
-body{
-    /*intend to add more here in the future*/
-}
-
 
 p {
     color: black;
@@ -31,6 +27,50 @@ h1.subtitle {
 
 ul {
     margin-bottom: 0.3em;
+}
+
+.bold {
+     font-weight: bold
+ }
+
+.italic {
+    font-style: italic;
+}
+
+.imageHolder {
+    /* border: solid 2px black; */
+    clear: both;
+    max-width: 300px;
+    margin-right: auto;
+    margin-bottom: 1em;
+    margin-left: auto;
+    text-align: center;
+}
+
+p.caption {
+    /* border: solid 2px red; */
+    clear: both;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 0.9em;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0.5em;
+}
+
+.imageTravel {
+    /* border: solid 2px black; */
+    clear: both;
+    margin-right: auto;
+    margin-bottom: 3em;
+    margin-left: auto;
+    text-align: center;
+}
+
+p.travel {
+    color: black;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    font-size: 1.2em;
+    margin-bottom: 1em;
 }
 
 /*-------------------------------------------------*/
@@ -90,21 +130,50 @@ ul {
     color: yellow;
 }
 
-.bold {
-    font-weight: bold
-}
-.italic {
-    font-style: italic;
-}
-
 #container {
-    margin-right: 10%;
-    margin-left: 10%;
+
     padding: 10px 10px 10px 10px;
 
     /*margin-left: auto;*/
     /*margin-right: auto;*/
     /*max-width: 1000px;*/
+    min-height:100%;
+    position:relative;
+
 }
 
+#content {
+    padding-bottom:100px; /* Height of the footer element */
+
+    margin-right: 12%;
+    margin-left: 12%;
+}
+
+
+#footer {
+    /*background:#ffab62;*/
+    background:black;
+    color: white;
+
+    width:100%;
+    height:100px;
+    position:absolute;
+    bottom:0;
+    left:0;
+
+}
+
+#footer p{
+    color: white;
+    margin-left: 12%;
+}
+
+#footer a:visited{
+    color:#999;
+}
+
+#footer a:link {
+    color:#999;
+    text-decoration: none;
+}
 
